--- a/SoftwarerAchitecture.Web/Views/CtrlShared/Header.cshtml
+++ b/SoftwarerAchitecture.Web/Views/CtrlShared/Header.cshtml
@@ -6,4 +6,5 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link href="~/Scripts/css/style.css" rel="stylesheet" />
+    <script src="~/Scripts/NavCode.js"></script>
 </head>
